k8s/salle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salle-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salle-service
  template:
    metadata:
      labels:
        app: salle-service
    spec:
      containers:
        - name: salle-service
          image: salle-service
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
