k8s/salle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  selector:
    app: salle-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
